# MLOps_project

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  dvc.yaml  params.yaml  params.yml  pyproject.toml  requirements.txt
artifacts/: metrics.json  model.pkl
data/raw/: final_dataset.csv  prompts2.csv
mlartifacts/1/models/m-1cf9b9bcbbbf451e898ec0b63b1c6c01/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-1f6025aa671d4cfaa0e40868e34bc28f/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-2b8702cbe24941d8b884a6af40c12375/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-67646b6cce9f4ae7a7fb8253b82c62aa/artifacts/: MLmodel
mlartifacts/1/models/m-743d4e233c27418f90f8772122b92e8a/artifacts/: MLmodel  model.pkl  python_env.yaml
mlartifacts/1/models/m-89338484c5634152a3ae24ac9a0e7bb9/artifacts/: MLmodel
mlartifacts/1/models/m-9b6551e1e8284de38ebd6d830614fea4/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-d5be6f36eb764c16bb9bc971f4c4e372/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-ea3fad30b9444560be2d04b548c57ef9/artifacts/: MLmodel  model.pkl
monitoring/: prometheus.yml
scripts/: monitor_data.py  prepare_data.py  train_model.py
src/prompt_firewall/: __init__.py  api.py  config.py  data.py  monitor.py  train.py
src/prompt_firewall_mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_data.py
