[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-firewall-mlops"
version = "0.1.0"
description = "End-to-end MLOps prompt firewall with DVC, MLflow, Evidently, Jenkins, and Dependency-Track"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "numpy>=1.26.0",
  "pyyaml>=6.0.1",
  "dvc>=3.50.0",
  "mlflow>=2.15.0",
  "evidently>=0.4.33",
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "prometheus-fastapi-instrumentator>=7.0.0"
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.5.7",
  "black>=24.8.0",
  "pip-audit>=2.7.3",
  "cyclonedx-bom>=4.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
